# Certificado-Calibracao

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .npmrc  AGENTS.md  ANALISE_CONSOLIDADA_PRD.md  ARQUITETURA.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HARNESS_DESIGN.md  HARNESS_PATCHPLAN.md  LICENSE  PRD.md  PROMPT_ANALISE_PRD.md  README.md  REGRAS-INEGOCIAVEIS.md  docker-compose.yml  ideia.md  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  turbo.json
.agent/: CURRENT.md  SESSION.md
.claude/: settings.json
.codex/: config.design.toml  config.toml
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/: .gitkeep  CODEOWNERS  dependabot.yml  pull_request_template.md
adr/: 0001-backend-framework.md  0002-sync-strategy.md  0003-hosting-and-security-services.md  0004-normative-package-governance.md  0005-validation-dossier-coverage-semantics.md  0006-recovery-runbooks-governance.md  0007-verification-cascade-tooling.md  0008-redundancy-loop-gates.md  0009-tiebreaker-designation.md  0010-external-auditor-gates.md  0011-vertical-roadmap-gate.md  0012-sync-simulator-gate.md  0013-cloud-agent-attestation-gate.md  0014-agent-frontmatter-standard.md  0015-regulatory-slash-commands.md  0016-harness-observability-dashboard.md  0017-tier3-harness-design.md  0018-prd-copy-claims-remediation.md  0019-copy-lint-checkall-gate.md  0020-compliance-structure-gate.md  0021-property-seed-traces.md  0022-snapshot-diff-gate.md  0023-verification-issue-drafts.md  0024-spec-review-flag-issue-drafts.md  0025-epic-review-flag-and-issue-reconciliation.md  0026-roadmap-epic-mapping-fallback.md  0027-roadmap-requirement-link-integrity.md  0028-roadmap-explicit-requirement-coverage.md  0029-roadmap-transversal-tracks.md  0030-sync-chaos-validation.md  0031-normative-governance-owner.md  0032-legal-opinion-dpa-bundle.md  0033-regulatory-profiles-pdf-policy.md  0034-scope-cmc-emission-policy.md  0035-measurement-declaration-contract.md  0036-standard-eligibility-fail-closed.md  0037-critical-event-audit-trail-coverage.md  0038-technical-review-signature-audit-metadata.md  0039-controlled-reissue-audit-evidence.md  0040-sequential-numbering-per-tenant.md  (+27 more)
apps/: README.md
compliance/: README.md  approved-claims.md  cloud-agents-log.md  cloud-agents-policy.md  guardrails.md  harness-dashboard.md
config/: asgi.py  urls.py  wsgi.py
docs/: CODEMAP.md  CONVENCOES-DOC.md  INDEX.yaml  INDICE.md  MAPA-DO-DONO.md  ambiente-claude-code.md  como-os-agentes-trabalham-pra-mim.md  documentos-do-projeto.md  faseamento-foundation-waves.md  faseamento-modulos.md  novas funcionalidades.txt  orcamento-contexto.md  orcamento-financeiro.md  painel-do-dono.md  plano-defesas-anti-erros-ia.md  prd.md  roteamento-dual.md
evals/: README.md  property-config.yaml
harness/: 01-principios.md  02-arquitetura.md  03-agentes.md  04-compliance-pipeline.md  05-guardrails.md  06-copy-lint.md  07-governance-gate.md  08-sync-simulator.md  09-cloud-agents-policy.md  10-roadmap.md  11-budgets.md  12-escalation-matrix.md  13-runbooks-recovery.md  14-verification-cascade.md  15-redundancy-and-loops.md  16-agentes-auditores-externos.md  17-multi-tooling.md  README.md  STATUS.md
infra/: README.md
iso 17025/: README.md
normas e portarias inmetro/: README.md
scripts/: checa-tst-mecanico.sh  status-projeto.sh  verificar-catalogo-seed.sh
specs/: 0001-harness-compliance-gates.md  0002-mvp-acceptance-traceability.md  0003-recovery-runbooks.md  0004-verification-cascade.md  0005-redundancy-loops.md  0006-escalation-matrix.md  0007-external-auditors.md  0008-vertical-roadmap.md  0009-sync-simulator.md  0010-cloud-agent-attestation.md  0011-agent-frontmatter-standard.md  0012-regulatory-slash-commands.md  0013-harness-observability-dashboard.md  0014-tier3-harness-design.md  0015-prd-copy-claims-remediation.md  0016-copy-lint-checkall-gate.md  0017-compliance-structure-gate.md  0018-property-seed-traces.md  0019-snapshot-diff-gate.md  0020-verification-issue-drafts.md  0021-spec-review-flag-issues.md  0022-epic-review-flag-and-issue-reconciliation.md  0023-roadmap-epic-mapping-fallback.md  0024-roadmap-requirement-link-integrity.md  0025-roadmap-explicit-requirement-coverage.md  0026-roadmap-transversal-tracks.md  0027-prd-13-20-sync-chaos-validation.md  0028-prd-13-22-normative-governance-owner.md  0029-prd-13-21-legal-opinion-dpa.md  0030-prd-13-15-regulatory-profiles-pdf.md  0031-prd-13-10-scope-cmc-block.md  0032-prd-13-03-measurement-declarations.md  0033-prd-13-02-standard-eligibility-block.md  0034-prd-13-06-critical-event-audit-trail.md  0035-prd-13-04-technical-review-signature-audit.md  0036-prd-13-16-controlled-reissue.md  0037-prd-13-14-sequential-numbering.md  0038-prd-13-09-signatory-competence-block.md  0039-prd-13-08-equipment-customer-address.md  0040-prd-13-05-public-qr-authenticity.md  (+61 more)
tests/: conftest.py  factories.py  m8_pg_fixtures.py  test_audit_cadeia_por_tenant.py  test_audit_canonicalizar.py  test_audit_chain_e2e.py  test_audit_documento_hash_hmac_t_sec1.py  test_audit_event_helpers_t_cli_105.py  test_audit_job_contagem_diaria_t_cli_105.py  test_authz_audit_imutavel.py  test_authz_cadeia_pre_tenant.py  test_authz_e2e.py  test_authz_fuzzing.py  test_authz_isolamento.py  test_authz_mfa.py  test_authz_require_authz.py  test_breaker_acesso_pii_t_cli_104.py  test_bus_outbox_t_cli_107.py  test_certificados_inv_025_t_eqp_013_trigger.py  test_cliente_clean_validacoes_marco_1_close.py  test_clientes_api.py  test_clientes_isolamento.py  test_clientes_lgpd_enums_t_cli_101.py  test_clientes_modelo.py  test_clientes_rls_fail_loud.py  test_clientes_t_cli_108_payload_bloqueado.py  test_clientes_t_cli_109_predicate_entrega.py  test_clientes_us_cli_001_completa.py  test_clientes_us_cli_001_identidade_historico_t_cli_102.py  test_clientes_us_cli_002_visao360.py  test_clientes_us_cli_003_importar.py  test_clientes_us_cli_004_bloquear.py  test_clientes_us_cli_005_canonico.py  test_clientes_us_cli_005_canonico_trigger_t_cli_113.py  (+178 more)
(+2653 files in other folders)
