[tool.poetry]
name = "afere-erp"
version = "0.1.0"
description = "ERP multi-tenant para assistencia tecnica + calibracao ISO 17025 (nome do produto provisorio) — Foundation F-A em curso"
authors = ["Roldao Batista <balancassolution@gmail.com>"]
license = "Proprietary"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
djangorestframework = "^3.15.1"
psycopg = {version = "^3.2.1", extras = ["binary", "pool"]}
django-environ = "^0.11.2"
procrastinate = {version = "^2.9.0", extras = ["django"]}
drf-spectacular = "^0.27.2"
gunicorn = "^22.0.0"
whitenoise = "^6.6.0"
structlog = "^24.1.0"
# F-C2 (observabilidade Fatia D): cliente Prometheus oficial — expõe /metrics
# (Counter de requests + Histogram de latência) p/ scrape Grafana Agent/Prometheus
# (AGENTS.md §2). Fecha a infra do OBS-003 (métrica) carregado de M5..M9. Lib
# padrão de fato, mantida pela Prometheus community, Apache-2.0, sem CVE aberto.
# Multiprocess (gunicorn) via PROMETHEUS_MULTIPROC_DIR — wiring no runbook
# gates-externos-pre-producao.md (deploy-deferred).
prometheus-client = ">=0.21,<0.26"
argon2-cffi = "^23.1.0"
django-otp = "^1.4.0"
# Marco 2 — etiqueta PDF de equipamento (T-EQP-002 / AC-EQP-001-2 / TL1
# tech-lead). WeasyPrint renderiza HTML+CSS->PDF via libpango/libcairo
# (instalados no Dockerfile); qrcode gera SVG/PNG do hash QR (consumido
# de QRCode.hash da fundacao T-EQP-006). Sem alternativa puramente Python
# para fidelidade tipografica de etiqueta fisica.
weasyprint = "^62.3"
# pydyf < 0.11 obrigatorio com WeasyPrint 62.x (incompatibilidade com
# 0.11+ — AttributeError em pydyf.Stream.transform). Pin via
# constraint direta (poetry escolheria 0.12+ que quebra import).
pydyf = "<0.11"
qrcode = {version = "^7.4.2", extras = ["pil"]}
# Marco 2 — SLA em dias uteis BR (T-EQP-019 / AC-EQP-002b-2). workalendar
# fornece calendarios completos com feriados nacionais + estaduais ja
# embutidos (Brasil base + 27 UFs). Manter manual exigiria atualizar
# feriados moveis (Carnaval, Corpus Christi) a cada ano. MIT, sem CVE
# recente, mantido pelo Peopledoc/UKG.
workalendar = "^17.0.0"

# F-C1 P4 (T-FC1-09) — adapter HttpxWebhookOut canonico (ADR-0054 aceita
# dentro desta fase). Por que httpx vs requests:
# (a) ja vem como transitiva (httpx 0.28.1 no poetry.lock), declaracao
#     explicita aqui evita virar dep indireta sem controle.
# (b) httpx tem Transport customizavel — INV-WEBHOOK-OUT-004 (anti-DNS-
#     rebinding) exige connect pelo IP fixado preservando Host header
#     pra SNI/TLS validar cert pelo hostname original. Em requests isso
#     exige monkey-patch do urllib3 PoolManager; httpx aceita Transport
#     custom de forma limpa.
# (c) requests esta em modo manutencao (sem features novas); httpx eh o
#     padrao moderno (e tem suporte async se evoluirmos pra workers
#     async em F-C2/F-C3).
# CVE-check: pip-audit limpo em 2026-05-24; sem CVE conhecida em httpx
# 0.28.1. Mantenedor: encode (mesma org do Django REST Framework).
# Hash pin (DEP-002): nao toca KMS/cripto diretamente (HMAC e' stdlib
# `hmac`), entao versao ^ aceitavel; revisar quando entrar adapter KMS
# em F-C3.
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
mypy = "^1.10.0"
django-stubs = {version = "^5.0.2", extras = ["compatible-mypy"]}
djangorestframework-stubs = {version = "^3.15.0", extras = ["compatible-mypy"]}
pytest = "^8.2.2"
pytest-django = "^4.8.0"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
factory-boy = "^3.3.0"
freezegun = "^1.5.1"
django-extensions = "^3.2.3"
semgrep = "^1.74.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

# =============================================================
# ruff — formatador + linter (substitui black, isort, flake8)
# =============================================================
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["config", "src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "DJ",   # flake8-django
    "S",    # flake8-bandit (segurança)
    "C4",   # flake8-comprehensions
    "T20",  # flake8-print (proibe print em codigo)
    "RUF",  # ruff-specific
]
ignore = [
    "S101",  # uso de assert (ok em testes)
    "E501",  # linhas longas (line-length cobre)
]
# "×" (U+00D7 sinal de multiplicacao) e correto em texto tecnico PT:
# "Receita 5 anos × ISO 17025 8.4 (~25 anos)". Nao e confusable de "x".
allowed-confusables = ["×"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S603", "S607"]  # asserts/senhas OK; S603/S607: subprocess em testes de hook (INV-FIN-INAD-001) usa path abspath e input controlado
"**/migrations/*.py" = ["E501", "RUF012"]
"config/settings/*.py" = ["F405", "F403"]  # settings usam wildcard import
# RUF012: Django/DRF declaram atributos de classe mutaveis por design
# (Meta.permissions/indexes/constraints, Serializer.Meta.fields,
# ViewSet.permission_classes). ClassVar nao e idiomatico aqui — mesmo
# criterio ja aplicado a migrations acima (framework-estrutural).
"**/models.py" = ["RUF012"]
"**/serializers.py" = ["RUF012"]
"**/views.py" = ["RUF012"]
"**/views_*.py" = ["RUF012"]  # views fatiadas por agregado (ex: views_item_comercial.py)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================
# mypy — type checking estrito
# =============================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
# Migrations Django sao codigo gerado por `makemigrations` — anotar tipo
# manualmente eh antipadrao (Django sobrescreve em cada makemigrations).
# Excluimos do strict check; ainda passam por ruff format.
exclude = [
    # `(?:[^/]+/)+` cobre tanto o path achatado (calibracao/migrations) quanto
    # o aninhado pos-ADR-0072 (metrologia/padroes/migrations).
    "^src/infrastructure/(?:[^/]+/)+migrations/",
    "^config/settings/test_e2e\\.py$",
]

[tool.django-stubs]
django_settings_module = "config.settings.dev"

[[tool.mypy.overrides]]
module = [
    "procrastinate.*", "factory.*", "semgrep.*", "environ.*", "django_otp.*",
    "qrcode", "qrcode.*", "weasyprint", "weasyprint.*",
    "workalendar", "workalendar.*",
]
ignore_missing_imports = true

# Views DRF, serializers e admin herdam metodos `request`/`save` com
# assinatura controlada pelo framework. `disallow_untyped_defs=False` aqui
# evita poluicao de `# type: ignore[no-untyped-def]` em toda action;
# `check_untyped_defs=True` mantem checagem do corpo das funcoes.
[[tool.mypy.overrides]]
module = [
    "src.infrastructure.clientes.views",
    "src.infrastructure.clientes.serializers",
    "src.infrastructure.clientes.admin",
    "src.infrastructure.clientes.management.commands.job_inadimplencia_alertas",
    "src.infrastructure.equipamentos.admin",
    "src.infrastructure.equipamentos.views",
    "src.infrastructure.equipamentos.serializers",
    "src.infrastructure.responsavel_tecnico.views",
    "src.infrastructure.responsavel_tecnico.serializers",
    "src.infrastructure.ordens_servico.views",
    "src.infrastructure.ordens_servico.views_item_comercial",
    "src.infrastructure.ordens_servico.serializers",
    "src.infrastructure.ordens_servico.management.commands.*",
    "src.infrastructure.authz.views",
    "src.infrastructure.authz.serializers",
    "src.infrastructure.authz.admin",
    "src.infrastructure.authz.permissions",
    "src.infrastructure.tenant.admin",
    "src.infrastructure.usuario.admin",
    "src.infrastructure.feature_flag.admin",
    "src.infrastructure.audit.admin",
    "src.infrastructure.multitenant.middleware",
    "src.infrastructure.multitenant.connection",
    "src.infrastructure.multitenant.management.commands.*",
    "src.infrastructure.clientes.management.commands.*",
    "config.urls",
    "config.settings.base",
    "config.settings.dev",
    "config.settings.prod",
    "src.infrastructure.precificacao.views",
    "src.infrastructure.precificacao.serializers",
    "src.infrastructure.precificacao.apps",
    "src.infrastructure.precificacao.repositories",
    "src.infrastructure.precificacao.migrations.*",
    "src.infrastructure.colaboradores.views",
    "src.infrastructure.colaboradores.serializers",
    "src.infrastructure.orcamentos.views",
    "src.infrastructure.orcamentos.views_publicas",
    "src.infrastructure.orcamentos.serializers",
    "src.infrastructure.orcamentos.serializers_publico",
    "src.infrastructure.orcamentos._views_suporte",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_any_generics = false  # Django/DRF classes (ModelSerializer, ModelAdmin etc) usam generics opcionais

# Models Django: Manager generic e save/delete override sao padroes do
# framework. Relaxar type-arg em models eh seguro.
[[tool.mypy.overrides]]
module = [
    "src.infrastructure.*.models",
]
disallow_any_generics = false
warn_return_any = false

# =============================================================
# pytest — runner + cobertura
# =============================================================
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    # -ds na CLI vence a env var DJANGO_SETTINGS_MODULE=config.settings.dev que
    # o docker-compose injeta no container (o servidor roda em dev; a suite NAO
    # pode — dev usa RedisCache e o pacote `redis` nao esta instalado). Sem isto
    # `pytest` sem --ds explicito cai em dev e quebra com ModuleNotFoundError.
    # SANEA-06 (auditoria 10 lentes — Lente 03 Q1).
    "--ds=config.settings.test",
    "--strict-markers",
    "--strict-config",
    "--reuse-db",
    "--cov=src",
    "--cov=config",
    "--cov-report=term-missing",
    "--cov-report=html:reports/coverage",
    "--cov-fail-under=80",
]
markers = [
    "slow: testes que demoram (fuzzing, drill)",
    "integration: testes que precisam de banco real",
    "tenant_isolation: testes de isolamento cross-tenant (criticos)",
    "perfil: testes condicionados a perfil regulatorio do tenant (A/B/C/D). Use como @pytest.mark.perfil('A'). T-SAN-PERFIL-027 ADR-0067 — habilita parametrize matrix por perfil no futuro.",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src", "config"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "config/wsgi.py",
    "config/asgi.py",
    "manage.py",
    # Management commands de drill/operacao — ferramenta interna, não código de produto.
    # Auditor de Qualidade (concern #2 2026-05-18): paths críticos ficam >=83% sem isso.
    "src/infrastructure/multitenant/management/commands/popular_drill.py",
    "src/infrastructure/multitenant/management/commands/relatorio_operacao_fa.py",
    "src/infrastructure/multitenant/management/commands/validar_f_a.py",
    "src/infrastructure/authz/management/commands/validar_f_b.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
